--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-size: 14px;
     line-height: 18px;
     color: #000000;
-    background: #ffffff url("muffin-background.jpg") no-repeat 50% 0;
+    background: #ffffff url("img/image273.jpg") no-repeat 50% 0;
   }
   
   h1 {
@@ -57,21 +57,6 @@ body {
     text-align: center;
     background-repeat: no-repeat;
     background-position: center top;
-  }
-  
-  .feature-kitten {
-    padding-top: 60px;
-    background-image: url("bottle.svg");
-  }
-  
-  .feature-cat {
-    padding-top: 60px;
-    background-image: url("cat.svg");
-  }
-  
-  .feature-train {
-    padding-top: 60px;
-    background-image: url("whistle.svg");
   }
   
   .skills-list {
