--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-size: 14px;
     line-height: 18px;
     color: #000000;
-    background: #ffffff url("img/image273.jpg") no-repeat 50% 0;
+    background: url("img/1674638520_grizly-club-p-fon-meditsinskii-klipart-10.jpg");
   }
   
   h1 {
@@ -12,11 +12,12 @@ body {
     font-family: "Georgia", serif;
     font-size: 36px;
     line-height: 36px;
+    
   }
   
   h2 {
     padding-bottom: 12px;
-    border-bottom: 1px solid #cccccc;
+    border-bottom: 1px solid #ffffff;
   }
   
   .site-header {
@@ -26,13 +27,21 @@ body {
   .skills-item {
     margin-bottom: 15px;
     padding-left: 20px;
-    border-left: 10px solid #c4c4c4;
-    color: #999999;
+    background-color: #49c5c588;
+    color: white;
+    border: outset ;
+    border-radius: 10px 2px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    color: #000000;
   }
   
   .standard {
     border-color: #ffc5b3;
-    color: #666666;
+    color: #000000;
   }
   
   .container {
