--- a/style.css
+++ b/style.css
@@ -39,6 +39,21 @@ body {
     color: #000000;
   }
   
+.gallerry{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+
+
+
+
+
+
   .standard {
     border-color: #ffc5b3;
     color: #000000;
