--- a/style.css
+++ b/style.css
@@ -48,9 +48,34 @@ body {
 }
 
 
+  #left-arrow {
+    width: 80px;
+    height: 80px;
+  }
+  #main-image {
+    width: 300px;
+    height: 200px;
+  }
+  #right-arrow {
+    width: 80px;
+    height: 80px;
+  }
 
 
-
+ 
+  .arrow-button {
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .arrow-button:hover {
+    background-color: green;
+  }
+  
+  .arrow-button:active {
+    background-color: gray;
+  }
+  
 
 
 
