--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     padding: 0;
     font-family: "Arial", sans-serif;
-    font-size: 14px;
-    line-height: 18px;
+    font-size : 14px;
+    line-height : 18px;
     color: #000000;
-    background: url("img/1674638520_grizly-club-p-fon-meditsinskii-klipart-10.jpg");
+      ;
+    background: url("img/medical-healthcare-blue-color_1017-26807.avif") 0% / cover lightblue round border-box ;
   }
   
   h1 {
@@ -18,6 +19,10 @@ body {
 
 
 
+
+  
+
+  
 
 
 
@@ -38,7 +43,7 @@ body {
     background-color: #49c5c588;
     color: white;
     border: outset ;
-    border-radius: 10px 2px;
+    border-radius: 10px 10px;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -93,7 +98,7 @@ body {
   }
   
   .container {
-    width: 480px;
+    width: 600px;
     margin: 0 auto;
   }
   
@@ -175,12 +180,30 @@ body {
     background-color: #49c5c588;
     color: white;
     border: outset ;
-    border-radius: 10px 2px;
+    border-radius: 10px 10px;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     color: #000000;
+
+  }
+
+  .vitamin h3{
+    font-size: 24px;
+  }
+
+  .vitamin div {
+    margin-top: auto;
+    width: 80%;
+
+
+  }
+
+
+  .vitamin p:last-child{
+    text-align: center;
+    width: 100%;
 
   }
